hphp/hack/test/typecheck/instance_property_as_class_constant.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

class X {
    public ?string $foo;
}

function main(): void {
    var_dump(X::foo);
}
